# DevOps-Chessington-Python

./: .gitignore  .gitpod.yml  README.md  README.rst  during_the_workshop.md  pyproject.toml
chessington/: app.py
chessington/engine/: pieces.py
chessington/ui/: images.py
tests/: test_pieces.py
